TME-EMT tree updated

--- a/TME-EMT/Biblio/biblio.tex
+++ b/TME-EMT/Biblio/biblio.tex
@@ -70,9 +70,11 @@
 \nocite{Deshouillers-teRiele-Saouter*98}
 \nocite{Brillhart-Lehmer-Selfridge*75}
 \nocite{Jaeschke*93}
+\nocite{Dudek*16b}
+\nocite{Cully*21}
+\nocite{CostaPereira*89}
 \nocite{Dudek*15}
 \nocite{Carneiro-Milinovich-Soundararajan*19}
-\nocite{CostaPereira*89}
 \nocite{McCurley*84-2}
 \nocite{McCurley*84-3}
 \nocite{Kadiri*05-2}
