--- a/TME-EMT/Latex/Art09.tex
+++ b/TME-EMT/Latex/Art09.tex
@@ -216,7 +216,43 @@ remaining (smaller) range, we use theorems of
 \cite{Jaeschke*93}
 that yield a fast primality test (for this limited range).
 
-\begin{thm}{Theorem (2002)}
+For very large numbers \cite{Dudek*16b} proved:
+\begin{thm}{Theorem (2014)}
+
+  for $x \ge \exp(\exp(34.32)).$
+
+
+
+ 
+
+\cite{Cully*21} improved this to:
+Theorem (2021)
+
+ The interval $]x, x + 3x^{2/3}]$ contains a prime
+  for $x \ge \exp(\exp(33.99)).$
+
+
+
+\par 
+
+Let us recall here that a second line of approach following the original
+work of \v Ceby\v sev is still under examination though it does not give
+results as good
+as analytical means (see
+\cite{CostaPereira*89}
+for the latest result).
+
+
+
+
+
+  
+2. Interval with primes under RH, without any congruence condition
+
+
+
+\par Theorem (2002)
+
 
 Under the Riemann Hypothesis, the interval $\bigl]x-\tfrac85\sqrt{x}\log x,x\bigr]$
 contains a prime for $x\ge2$.
@@ -241,15 +277,6 @@ contains a prime for $x\ge4$.
 
 
 \par 
-\par 
-
-Let us recall here that a second line of approach following the original
-work of \v Ceby\v sev is still under examination though it does not give
-results as good
-as analytical means (see
-\cite{CostaPereira*89}
-for the latest result).
-
 
 
 
