--- a/TME-EMT/Latex/Local-TME-EMT.bib
+++ b/TME-EMT/Latex/Local-TME-EMT.bib
@@ -8,6 +8,134 @@
   Pages                    = {559-567},
   Volume                   = {17}
 }
+@article {Mars*73,
+    AUTHOR = {Mars, J.G.M.},
+     TITLE = {Sur l'approximation du nombre de solutions de certaines
+              \'{e}quations diophantiennes},
+   JOURNAL = {Ann. Sci. \'{E}cole Norm. Sup. (4)},
+  FJOURNAL = {Annales Scientifiques de l'\'{E}cole Normale Sup\'{e}rieure. Quatri\`eme
+              S\'{e}rie},
+    VOLUME = 6,
+      YEAR = 1973,
+     PAGES = {357--387},
+      ISSN = {0012-9593},
+   MRCLASS = {10J10 (10C15)},
+  MRNUMBER = 432574,
+MRREVIEWER = {T. Ono},
+       URL = {http://www.numdam.org/item?id=ASENS_1973_4_6_3_357_0},
+}
+@inproceedings {Selberg*92,
+    AUTHOR = {Selberg, Atle},
+     TITLE = {Old and new conjectures and results about a class of
+              {D}irichlet series},
+ BOOKTITLE = {Proceedings of the {A}malfi {C}onference on {A}nalytic
+              {N}umber {T}heory ({M}aiori, 1989)},
+     PAGES = {367--385},
+ PUBLISHER = {Univ. Salerno, Salerno},
+      YEAR = {1992},
+   MRCLASS = {11M41},
+  MRNUMBER = {1220477},
+MRREVIEWER = {D. R. Heath-Brown},
+}
+	
+@book {Bump-Cogdell-Shalit-Gaitsgory-Kowalski-Kudla*01,
+    AUTHOR = {Bump, D. and Cogdell, J. W. and de Shalit, E. and Gaitsgory,
+              D. and Kowalski, E. and Kudla, S. S.},
+     TITLE = {An introduction to the {L}anglands program},
+      NOTE = {Lectures presented at the Hebrew University of Jerusalem,
+              Jerusalem, March 12--16, 2001,
+              Edited by Joseph Bernstein and Stephen Gelbart},
+ PUBLISHER = {Birkh\"{a}user Boston, Inc., Boston, MA},
+      YEAR = {2003},
+     PAGES = {x+281},
+      ISBN = {0-8176-3211-5},
+   MRCLASS = {11F70 (11-06 11F12 11G09 11R39 11R58)},
+  MRNUMBER = {1990371},
+MRREVIEWER = {Alexey A. Panchishkin},
+}
+
+@article {Lou*19,
+    AUTHOR = {Lou, Miao},
+     TITLE = {Averages of shifted convolution sums for arithmetic functions},
+   JOURNAL = {Front. Math. China},
+  FJOURNAL = {Frontiers of Mathematics in China},
+    VOLUME = {14},
+      YEAR = {2019},
+    NUMBER = {1},
+     PAGES = {123--134},
+      ISSN = {1673-3452},
+   MRCLASS = {11F30 (11N75)},
+  MRNUMBER = {3918768},
+MRREVIEWER = {Jack Buttcane},
+       DOI = {10.1007/s11464-019-0749-9},
+}
+		
+@article {Lu-Guangshi*18,
+    AUTHOR = {L\"{u}, Guangshi},
+     TITLE = {Exponential sums with {F}ourier coefficients of automorphic
+              forms},
+   JOURNAL = {Math. Z.},
+  FJOURNAL = {Mathematische Zeitschrift},
+    VOLUME = {289},
+      YEAR = {2018},
+    NUMBER = {1-2},
+     PAGES = {267--278},
+      ISSN = {0025-5874},
+   MRCLASS = {11F30 (11F11 11F66)},
+  MRNUMBER = {3803789},
+MRREVIEWER = {Abhash Kumar Jha},
+       DOI = {10.1007/s00209-017-1950-8},
+}
+@article {Miller*06,
+    AUTHOR = {Miller, Stephen D.},
+     TITLE = {Cancellation in additively twisted sums on {${\rm GL}(n)$}},
+   JOURNAL = {Amer. J. Math.},
+  FJOURNAL = {American Journal of Mathematics},
+    VOLUME = {128},
+      YEAR = {2006},
+    NUMBER = {3},
+     PAGES = {699--729},
+      ISSN = {0002-9327},
+   MRCLASS = {11F67 (11F70)},
+  MRNUMBER = {2230922},
+MRREVIEWER = {Emmanuel P. Royer},
+}
+@article {Jiang-Lu*21,
+    AUTHOR = {Jiang, Yujiao and L\"{u}, Guangshi},
+     TITLE = {The generalized {B}ourgain-{S}arnak-{Z}iegler criterion and its application to additively twisted sums on {GL}${}_m$},
+   JOURNAL = {Sci. China Math.},
+    VOLUME = {},
+      YEAR = {2020},
+    NUMBER = {},
+     PAGES = {24pp},
+       DOI = {10.1007/s11425-020-1717-1},
+}
+
+@incollection {Ihara*06,
+    AUTHOR = {Ihara, Yasutaka},
+     TITLE = {On the {E}uler-{K}ronecker constants of global fields and
+              primes with small norms},
+ BOOKTITLE = {Algebraic geometry and number theory},
+    SERIES = {Progr. Math.},
+    VOLUME = {253},
+     PAGES = {407--451},
+ PUBLISHER = {Birkh\"{a}user Boston, Boston, MA},
+      YEAR = {2006},
+   MRCLASS = {11R42 (11R47 11R58)},
+  MRNUMBER = {2263195},
+MRREVIEWER = {Alexander A. Borisov},
+       DOI = {10.1007/978-0-8176-4532-8_5},
+}
+		
+@misc{Dona-Helfgott-Zuniga*20,
+      title={Explicit $L^2$ bounds for the Riemann $\zeta$ function}, 
+      author={Daniele Dona and Harald A. Helfgott and Sebastian Zuniga Alterman},
+      year={2020},
+      eprint={1906.01097},
+      archivePrefix={arXiv},
+      primaryClass={math.NT}
+}
+
 @article {Yang*91,
     AUTHOR = {Yang, Wei H.},
      TITLE = {On generalized {H}\"{o}lder inequality},
@@ -38,6 +166,33 @@ MRREVIEWER = {L. Losonczi},
  Language = {German},
  Zbl = {44.0290.04}
 }
+@book {Deitmar-Echterhoff*14,
+    AUTHOR = {Deitmar, Anton and Echterhoff, Siegfried},
+     TITLE = {Principles of harmonic analysis},
+    SERIES = {Universitext},
+   EDITION = {Second},
+ PUBLISHER = {Springer, Cham},
+      YEAR = {2014},
+     PAGES = {xiv+332},
+      ISBN = {978-3-319-05791-0; 978-3-319-05792-7},
+   MRCLASS = {43-01 (22E30 46J10 46L05)},
+  MRNUMBER = {3289059},
+       DOI = {10.1007/978-3-319-05792-7},
+}
+	
+@book {Deitmar-Etcherhoff*09,
+    AUTHOR = {Deitmar, Anton and Echterhoff, Siegfried},
+     TITLE = {Principles of harmonic analysis},
+    SERIES = {Universitext},
+ PUBLISHER = {Springer, New York},
+      YEAR = {2009},
+     PAGES = {xvi+333},
+      ISBN = {978-0-387-85468-7},
+   MRCLASS = {43-01 (22Dxx 22E30 46J10 46L05)},
+  MRNUMBER = {2457798},
+MRREVIEWER = {Krishnan Parthasarathy},
+}
+
 @InCollection{Brent-vandeLune*11,
   author = 	 {Brent, R.P. and {van de Lune}, J.},
   title = 	 {A note on {P}{\'o}lya's observation concerning {L}iouville's function},
@@ -203,13 +358,14 @@ MRREVIEWER = {Arnaud Chadozeau},
 MRREVIEWER = {Matti Jutila},
        DOI = {10.1007/BF01390204},
 }
-@Article{Cafferata-Perelli-Zaccagnini,
-  Title                    = {An extension of the Bourgain -Sarnak-Ziegler {T}heorem with modular applications},
+@Article{Cafferata-Perelli-Zaccagnini*20,
+  Title                    = {An extension of the {B}ourgain-{S}arnak-{Z}iegler {T}heorem with modular applications},
   Author                   = {Cafferata, M. and Perelli, A. and Zaccagnini, A.},
-  Journal                  = {Private communication},
-  Year                     = {2019},
+  Journal ={Quart. J. Math. Oxford},
+  Year                     = {2020},
   Number                   = {},
-  Pages                    = {},
+  DOI={10.1093/qmathj/haz048},
+  Pages                    = {359--377},
   Volume                   = {}
 }
 
@@ -418,6 +574,23 @@ MRREVIEWER = {G. Greaves},
 MRREVIEWER = {Marc Del\'eglise},
        URL = {http://projecteuclid.org/euclid.em/1109106439},
 }
+@article {Siksek*16,
+    AUTHOR = {Siksek, Samir},
+     TITLE = {Every integer greater than 454 is the sum of at most seven
+              positive cubes},
+   JOURNAL = {Algebra Number Theory},
+  FJOURNAL = {Algebra \& Number Theory},
+    VOLUME = {10},
+      YEAR = {2016},
+    NUMBER = {10},
+     PAGES = {2093--2119},
+      ISSN = {1937-0652},
+   MRCLASS = {11P05},
+  MRNUMBER = {3582015},
+MRREVIEWER = {Scott T. Parsell},
+       DOI = {10.2140/ant.2016.10.2093},
+}
+
 @article {Shao*14,
     AUTHOR = {Shao, Xuancheng},
      TITLE = {An {$L$}-function-free proof of {V}inogradov's three primes
@@ -765,7 +938,23 @@ MRREVIEWER = {Christian Elsholtz},
 MRREVIEWER = {Giovanni Coppola},
        DOI = {10.1112/S1461157015000297},
 }
+@article{Dudek*16b,
+  title={An explicit result for primes between cubes},
+  author={Dudek, Adrian W},
+  journal={Functiones et Approximatio Commentarii Mathematici},
+  volume={55},
+  number={2},
+  pages={177--197},
+  year={2016},
+  publisher={Adam Mickiewicz University, Faculty of Mathematics and Computer Science}
+}
 
+@article{Cully*21,
+  title={Primes between consecutive powers},
+  author={Cully-Hugill, Michaela},
+  journal={arXiv preprint arXiv:2107.14468},
+  year={2021}
+}
 @article {Lau-Liu-Wu*12,
     AUTHOR = {Lau, Y.-K. and Liu, J.-Y. and Wu, J.},
      TITLE = {The first negative coefficients of symmetric square
@@ -3033,6 +3222,39 @@ MRREVIEWER = {H. S. Zuckerman},
   Mrreviewer               = {F. Oort}
 }
 
+@article {Lao-Huixue*10,
+    AUTHOR = {Lao, Huixue},
+     TITLE = {On the distribution of integral ideals and {H}ecke
+              {G}r\"{o}ssencharacters},
+   JOURNAL = {Chin. Ann. Math. Ser. B},
+  FJOURNAL = {Chinese Annals of Mathematics. Series B},
+    VOLUME = {31},
+      YEAR = {2010},
+    NUMBER = {3},
+     PAGES = {385--392},
+      ISSN = {0252-9599},
+   MRCLASS = {11N37 (11R44)},
+  MRNUMBER = {2652933},
+MRREVIEWER = {Brundaban Sahu},
+       DOI = {10.1007/s11401-008-0450-x},
+}
+
+@article {Debaene*19,
+    AUTHOR = {Debaene, Korneel},
+     TITLE = {Explicit counting of ideals and a {B}run-{T}itchmarsh
+              inequality for the {C}hebotarev density theorem},
+   JOURNAL = {Int. J. Number Theory},
+  FJOURNAL = {International Journal of Number Theory},
+    VOLUME = {15},
+      YEAR = {2019},
+    NUMBER = {5},
+     PAGES = {883--905},
+      ISSN = {1793-0421},
+   MRCLASS = {11R44 (11H06 11N35)},
+  MRNUMBER = {3955839},
+MRREVIEWER = {M. Ram Murty},
+       DOI = {10.1142/S1793042119500477},
+}
 @Article{Bhowmik-Ramare*02-?,
   Title                    = {Rationality of the zeta function of the subgroups of
   abelian $p$-groups},
@@ -3174,6 +3396,22 @@ MRREVIEWER = {Claudia A. Spiro-Silverman},
   Pages                    = {xii+253}
 }
 
+@article {Nowak*93,
+    AUTHOR = {Nowak, Werner Georg},
+     TITLE = {On the distribution of integer ideals in algebraic number
+              fields},
+   JOURNAL = {Math. Nachr.},
+  FJOURNAL = {Mathematische Nachrichten},
+    VOLUME = {161},
+      YEAR = {1993},
+     PAGES = {59--74},
+      ISSN = {0025-584X},
+   MRCLASS = {11R44 (11N45)},
+  MRNUMBER = {1251010},
+MRREVIEWER = {Ekkehard Kr\"{a}tzel},
+       DOI = {10.1002/mana.19931610107},
+}
+		
 @Article{Birch-Swinnerton-Dyer*65,
   Title                    = {Notes on elliptic curves. {II}},
   Author                   = {B.J. Birch and H.P.F. Swinnerton-Dyer},
@@ -3730,7 +3968,6 @@ MRREVIEWER = {Jan-Christoph Schlage-Puchta},
   Mrclass                  = {11M26},
   Mrnumber                 = {1741611 (2000k:11099)},
   Mrreviewer               = {D. R. Heath-Brown},
-  Url                      = {http://dx.doi.org/10.1155/S107379280000009X}
 }
 
 @Article{Bourgain*99,
@@ -4275,6 +4512,22 @@ MRREVIEWER = {G. Greaves},
   Volume                   = {17}
 }
 
+@article {Chandrasekharan-Narasimhan*62,
+    AUTHOR = {Chandrasekharan, K. and Narasimhan, Raghavan},
+     TITLE = {Functional equations with multiple gamma factors and the
+              average order of arithmetical functions},
+   JOURNAL = {Ann. of Math. (2)},
+  FJOURNAL = {Annals of Mathematics. Second Series},
+    VOLUME = {76},
+      YEAR = {1962},
+     PAGES = {93--136},
+      ISSN = {0003-486X},
+   MRCLASS = {10.43 (10.41)},
+  MRNUMBER = {140491},
+MRREVIEWER = {A. E. Ingham},
+       DOI = {10.2307/1970267},
+}
+
 @Book{Chandrasekharan*70,
   Title                    = {Arithmetical functions},
   Author                   = {K. Chandrasekharan},
@@ -4452,6 +4705,54 @@ MRREVIEWER = {R. A. Rankin},
   Mrnumber                 = {MR869195 (88a:11079)},
   Mrreviewer               = {Matti Jutila}
 }
+
+@article {Pan*57,
+    AUTHOR = {Pan, Cheng Dong},
+     TITLE = {On the least prime in an arithmetical progression},
+   JOURNAL = {Sci. Record (N.S.)},
+  FJOURNAL = {Science Record. New Series},
+    VOLUME = {1},
+      YEAR = {1957},
+     PAGES = {311--313},
+      ISSN = {0559-1244},
+   MRCLASS = {10.00},
+  MRNUMBER = {105398},
+MRREVIEWER = {W. H. Simons},
+}
+		
+@article {Chen-Liu*89b,
+    AUTHOR = {Chen, Jing Run and Liu, Jian Min},
+     TITLE = {On the least prime in an arithmetical progression. {IV}},
+   JOURNAL = {Sci. China Ser. A},
+  FJOURNAL = {Science in China (Scientia Sinica). Series A. Mathematics,
+              Physics, Astronomy},
+    VOLUME = {32},
+      YEAR = {1989},
+    NUMBER = {7},
+     PAGES = {792--807},
+      ISSN = {1001-6511},
+   MRCLASS = {11N13 (11M26)},
+  MRNUMBER = {1058000},
+MRREVIEWER = {Wolfgang Schwarz},
+}
+		
+
+@article {Chen-Liu*89a,
+    AUTHOR = {Chen, Jing Run and Liu, Jian Min},
+     TITLE = {On the least prime in an arithmetical progression. {III}},
+   JOURNAL = {Sci. China Ser. A},
+  FJOURNAL = {Science in China (Scientia Sinica). Series A. Mathematics,
+              Physics, Astronomy},
+    VOLUME = {32},
+      YEAR = {1989},
+    NUMBER = {6},
+     PAGES = {654--673, 792--807},
+      ISSN = {1001-6511},
+   MRCLASS = {11N13 (11M26)},
+  MRNUMBER = {1056044},
+MRREVIEWER = {Wolfgang Schwarz},
+}
+
 
 @Article{Chen-Wang*91-1,
   Title                    = {Estimation of the second main term in odd {G}oldbach problem},
@@ -4729,6 +5030,24 @@ MRREVIEWER = {R. A. Rankin},
   Pages                    = {132-166},
   Volume                   = {3}
 }
+@article {Cochrane*88,
+    AUTHOR = {Cochrane, Todd},
+     TITLE = {Trigonometric approximation and uniform distribution modulo
+              one},
+   JOURNAL = {Proc. Amer. Math. Soc.},
+  FJOURNAL = {Proceedings of the American Mathematical Society},
+    VOLUME = {103},
+      YEAR = {1988},
+    NUMBER = {3},
+     PAGES = {695--702},
+      ISSN = {0002-9939},
+   MRCLASS = {11K06 (11A07)},
+  MRNUMBER = {947641},
+MRREVIEWER = {Jean-Pierre Borel},
+       DOI = {10.2307/2046836},
+}
+		
+
 
 @Article{Cochrane-Peral*91,
   Title                    = {An asymptotic formula for a trigonometric sum of {V}inogradov},
@@ -7428,7 +7747,20 @@ MRREVIEWER = {Nigel Watt},
   Mrnumber                 = {2988376},
   Mrreviewer               = {D. R. Heath-Brown}
 }
-
+@proceedings {Cassels-Frohlich*67,
+     TITLE = {Algebraic number theory},
+ BOOKTITLE = {Proceedings of an instructional conference organized by the
+              {L}ondon {M}athematical {S}ociety (a {NATO} {A}dvanced {S}tudy
+              {I}nstitute) with the support of the {I}nternational
+              {M}athematical {U}nion},
+    EDITOR = {Cassels, J. W. S. and Fr\"{o}hlich, A.},
+ PUBLISHER = {Academic Press, London; Thompson Book Co., Inc., Washington,
+              D.C.},
+      YEAR = {1967},
+     PAGES = {xviii+366},
+   MRCLASS = {00.04 (10.00)},
+  MRNUMBER = {0215665},
+}
 @Article{Frolenkov-Soundararajan*13,
   Title                    = {A generalization of the {P}\'olya--{V}inogradov inequality},
   Author                   = {Frolenkov, D. A. and Soundararajan, K.},
@@ -9081,7 +9413,7 @@ MRREVIEWER = {R. H. Bruck},
   Url                      = {http://dx.doi.org/10.1112/jlms/s2-27.1.9}
 }
 
-@Article{Harman*82,
+@Article{Harman*82b,
   Title                    = {Primes in short intervals},
   Author                   = {G. Harman},
   Journal                  = {Math. Z.},
@@ -9200,14 +9532,6 @@ MRREVIEWER = {H.-E. Richert},
   Volume                   = {1}
 }
 
-@Article{Heath-Brown*79,
-  Title                    = {A large values estimate for {D}irichlet polynomials},
-  Author                   = {{D.R.} Heath-Brown},
-  Journal                  = {J. Lond. Math. Soc., II Ser.},
-  Year                     = {1979},
-  Pages                    = {8-18},
-  Volume                   = {20}
-}
 
 @Article{Heath-Brown*77,
   Title                    = {On the density of the zeros of the {D}edekind zeta-function},
@@ -9346,7 +9670,6 @@ MRREVIEWER = {Vilius Stak\"Anas},
   Mrclass                  = {10G20},
   Mrnumber                 = {545197 (81a:10052)},
   Mrreviewer               = {Matti Jutila},
-  Url                      = {http://dx.doi.org/10.1112/jlms/s2-20.1.8}
 }
 
 @Article{HeathBrown*78,
@@ -13599,13 +13922,46 @@ MRREVIEWER = {Francesco Pappalardi},
   Olddoi                   = {10.2298/PIM0476031M},
   Url                      = {http://dx.doi.org/10.2298/PIM0476031M}
 }
+@article {Fouvry-Ganguly*14,
+    AUTHOR = {Fouvry, \'{E}tienne and Ganguly, Satadal},
+     TITLE = {Strong orthogonality between the {M}\"{o}bius function, additive
+              characters and {F}ourier coefficients of cusp forms},
+   JOURNAL = {Compos. Math.},
+  FJOURNAL = {Compositio Mathematica},
+    VOLUME = {150},
+      YEAR = {2014},
+    NUMBER = {5},
+     PAGES = {763--797},
+      ISSN = {0010-437X},
+   MRCLASS = {11F30 (11N75)},
+  MRNUMBER = {3209795},
+MRREVIEWER = {Deyu Zhang},
+       DOI = {10.1112/S0010437X13007732},
+}
 
+@article {Jutila*87,
+    AUTHOR = {Jutila, M.},
+     TITLE = {On exponential sums involving the {R}amanujan function},
+   JOURNAL = {Proc. Indian Acad. Sci. Math. Sci.},
+  FJOURNAL = {Indian Academy of Sciences. Proceedings. Mathematical
+              Sciences},
+    VOLUME = {97},
+      YEAR = {1987},
+    NUMBER = {1-3},
+     PAGES = {157--166 (1988)},
+      ISSN = {0253-4142},
+   MRCLASS = {11L40 (11L03 11N37)},
+  MRNUMBER = {983611},
+MRREVIEWER = {Hartmut Menzer},
+       DOI = {10.1007/BF02837820},
+}
 @Article{Motohashi*83,
   Title                    = {Sieve {M}ethods and {P}rime {N}umber {T}heory},
   Author                   = {Y. Motohashi},
   Journal                  = {Tata Lectures Notes},
   Year                     = {1983},
-  Pages                    = {205}
+  Pages                    = {205},
+  url = {http://www.math.tifr.res.in/~publ/ln/tifr72.pdf},
 }
 
 @Article{Motohashi*79,
@@ -13753,6 +14109,39 @@ MRREVIEWER = {Matti Jutila},
   Mrreviewer               = {D. H. Lehmer}
 }
 
+
+@article {Friedman*89,
+    AUTHOR = {Friedman, Eduardo},
+     TITLE = {Analytic formulas for the regulator of a number field},
+   JOURNAL = {Invent. Math.},
+  FJOURNAL = {Inventiones Mathematicae},
+    VOLUME = {98},
+      YEAR = {1989},
+    NUMBER = {3},
+     PAGES = {599--622},
+      ISSN = {0020-9910},
+   MRCLASS = {11R27 (11R42)},
+  MRNUMBER = {1022309},
+MRREVIEWER = {T. Mets\"{a}nkyl\"{a}},
+       DOI = {10.1007/BF01393839},
+}
+
+@article {Zimmert*81,
+    AUTHOR = {Zimmert, Rainer},
+     TITLE = {Ideale kleiner {N}orm in {I}dealklassen und eine
+              {R}egulatorabsch\"{a}tzung},
+   JOURNAL = {Invent. Math.},
+  FJOURNAL = {Inventiones Mathematicae},
+    VOLUME = {62},
+      YEAR = {1981},
+    NUMBER = {3},
+     PAGES = {367--380},
+      ISSN = {0020-9910},
+   MRCLASS = {12A45 (12A35)},
+  MRNUMBER = {604833},
+       DOI = {10.1007/BF01394249},
+}
+		
 @Book{Narkiewicz*04,
   Title                    = {Elementary and analytic theory of algebraic numbers},
   Author                   = {W. Narkiewicz},
@@ -15069,13 +15458,72 @@ MRREVIEWER = {John H. Loxton},
   Pages                    = {677--682},
   Volume                   = {45}
 }
-
+@article {Lao*10,
+    AUTHOR = {Lao, Huixue},
+     TITLE = {Mean square estimates for coefficients of symmetric power
+              {$L$}-functions},
+   JOURNAL = {Acta Appl. Math.},
+  FJOURNAL = {Acta Applicandae Mathematicae},
+    VOLUME = {110},
+      YEAR = {2010},
+    NUMBER = {3},
+     PAGES = {1127--1136},
+      ISSN = {0167-8019},
+   MRCLASS = {11F66 (11F11 11F30)},
+  MRNUMBER = {2639161},
+MRREVIEWER = {Nadya Gurevich},
+       DOI = {10.1007/s10440-009-9497-2},
+}
+@article {Fomenko*07,
+    AUTHOR = {Fomenko, O. M.},
+     TITLE = {Mean value theorems for automorphic {$L$}-functions},
+   JOURNAL = {Algebra i Analiz},
+  FJOURNAL = {Rossi\u{\i}skaya Akademiya Nauk. Algebra i Analiz},
+    VOLUME = {19},
+      YEAR = {2007},
+    NUMBER = {5},
+     PAGES = {246--264},
+      ISSN = {0234-0852},
+   MRCLASS = {11F66},
+  MRNUMBER = {2381948},
+MRREVIEWER = {Nadya Gurevich},
+       DOI = {10.1090/S1061-0022-08-01024-8},
+}
+		
+@article {Rankin*39,
+    AUTHOR = {Rankin, R. A.},
+     TITLE = {Contributions to the theory of {R}amanujan's function
+              {$\tau(n)$} and similar arithmetical functions. {I}. {T}he
+              zeros of the function {$\sum^\infty_{n=1}\tau(n)/n^s$} on
+              the line {${\Re R}s=13/2$}. {II}. {T}he order of the
+              {F}ourier coefficients of integral modular forms},
+   JOURNAL = {Proc. Cambridge Philos. Soc.},
+  FJOURNAL = {Proceedings of the Cambridge Philosophical Society},
+    VOLUME = {35},
+      YEAR = {1939},
+     PAGES = {351--372},
+      ISSN = {0008-1981},
+   MRCLASS = {10.0X},
+  MRNUMBER = {411},
+MRREVIEWER = {A. E. Ingham},
+}
 @Article{Ramare*13a,
-  Title                    = {A sharp bilinear form decomposition for primes and Moebius function},
+  Title                    = {Modular Ternary Additive Problems with Irregular or Prime Numbers},
   Author                   = {G. K. Viswanadham and O. {Ramar\'e}},
-  Journal                  = {Submitted},
-  Year                     = {2018},
-  Pages                    = {45pp}
+  Journal                  = {Proc. Steklov Inst. Math.},
+  Year                     = {2021},
+  Pages                    = {48pp},
+  Notes ={Volume dedicated to I.M. Vinogradov},
+  Volume ={314},}
+
+@Article{Ramare-Kasi*21,
+  Title                    = {Modular Ternary Additive Problems with Irregular or Prime Numbers},
+  Author                   = {O. {Ramar\'e} and G. K. Viswanadham},
+  Journal                  = {Proc. Steklov Inst. Math.},
+  Year                     = {2021},
+  Pages                    = {48pp},
+  Notes ={Volume dedicated to I.M. Vinogradov},
+  Volume ={314},
 }
 
 @Article{Ramare*13b,
@@ -17270,7 +17718,6 @@ Article{Trudgian*12,
   Author                   = {T. Trudgian},
   Year                     = {2012},
   Note                     = {\url{http://arxiv.org/abs/1210.6743}},
-
   Page                     = {5pp}
 }
 
@@ -17618,6 +18065,20 @@ MRREVIEWER = {J. Knopfmacher},
   Pages                    = {291-294},
   Volume                   = {15}
 }
+
+@Article{Vinogradov*39,
+ Author = {I. M. {Vinogradov}},
+ Title = {{A new improvement of the method of estimation of trigonometrical sums with primes.}},
+ FJournal = {{Comptes Rendus (Doklady) de l'Acad\'emie des Sciences de l'URSS, Nouvelle S\'erie}},
+ Journal = {{C. R. (Dokl.) Acad. Sci. URSS, n. Ser.}},
+ ISSN = {1819-0723},
+ Volume = {22},
+ Pages = {59},
+ Year = {1939},
+ Language = {English},
+ Zbl = {65.0169.01}
+}
+
 @Article{Vinogradov*27,
     Author = {I. M. {Vinogradov}},
     Title = {{Analytischer Beweis des Satzes \"uber die Verteilung der Bruchteile eines Polynoms.}},
@@ -18234,7 +18695,24 @@ MRREVIEWER = {Leszek Kaniecki},
   Mrreviewer               = {Ayyadurai Sankaranarayanan},
   Url                      = {\url{http://dx.doi.org/10.1007/s10114-011-8310-0}}
 }
-
+@Article{Petrow-Young*20,
+      title={The Weyl bound for Dirichlet $L$-functions of cube-free conductor}, 
+      author={Ian Petrow and Matthew P. Young},
+      year={2020},
+      journal={Annals of Math.},
+      eprint={1811.02452},
+      archivePrefix={arXiv},
+      primaryClass={math.NT}
+}
+@Article{Young-Petrow*20,
+      title={The Weyl bound for Dirichlet $L$-functions of cube-free conductor}, 
+      author={Ian Petrow and Matthew P. Young},
+      year={2020},
+      journal={Annals of Math.},
+      eprint={1811.02452},
+      archivePrefix={arXiv},
+      primaryClass={math.NT}
+}
 @Article{Young-Potler*89,
   Title                    = {First occurence prime gaps},
   Author                   = {A. {Young} and J. {Potler}},
