TME-EMT tree updated

--- a/TME-EMT/Latex/Art09.tex
+++ b/TME-EMT/Latex/Art09.tex
@@ -216,7 +216,10 @@ remaining (smaller) range, we use theorems of
 \cite{Jaeschke*93}
 that yield a fast primality test (for this limited range).
 
-For very large numbers \cite{Dudek*16b} proved:
+For very large numbers 
+\cite{Dudek*16b} 
+proved:
+
 \begin{thm}{Theorem (2014)}
 
   for $x \ge \exp(\exp(34.32)).$
@@ -225,10 +228,12 @@ For very large numbers \cite{Dudek*16b} proved:
 
  
 
-\cite{Cully*21} improved this to:
+\cite{Cully*21}
+improved this to:
+
 Theorem (2021)
 
- The interval $]x, x + 3x^{2/3}]$ contains a prime
+ The interval $(x, x + 3x^{2/3}]$ contains a prime
   for $x \ge \exp(\exp(33.99)).$
 
 
@@ -319,7 +324,7 @@ Collecting references:
 
 
   
-\begin{flushright}\small\sl{}   Last updated on November 14th, 2017, by Olivier Ramar\'e
+\begin{flushright}\small\sl{}   Last updated on September 1rst, 2021, by Charles Greathouse.
  \end{flushright}
 
 
