TME-EMT tree updated

--- a/TME-EMT/Latex/Art09.tex
+++ b/TME-EMT/Latex/Art09.tex
@@ -57,7 +57,7 @@ are still far from the conjecture in
 \cite{Cramer*36}
 on
 probabilistic grounds: the interval $[x-K\log^2x,x]$ contains a prime for any
-$K>1$ and $x\geq x_0(K)$. Note that this statement has been proved for almost
+$K > 1$ and $x\geq x_0(K)$. Note that this statement has been proved for almost
 all intervals in a quadratic average sense in
 \cite{Selberg*43}
 assuming the Riemann Hypothesis and replacing $K$ by a function $K(x)$ tending
@@ -216,27 +216,8 @@ remaining (smaller) range, we use theorems of
 \cite{Jaeschke*93}
 that yield a fast primality test (for this limited range).
 
-For very large numbers 
-\cite{Dudek*16b} 
-proved:
-
-\begin{thm}{Theorem (2014)}
-
-  for $x \ge \exp(\exp(34.32)).$
-
-
 
  
-
-\cite{Cully*21}
-improved this to:
-
-Theorem (2021)
-
- The interval $(x, x + 3x^{2/3}]$ contains a prime
-  for $x \ge \exp(\exp(33.99)).$
-
-
 
 \par 
 
@@ -247,24 +228,42 @@ as analytical means (see
 \cite{CostaPereira*89}
 for the latest result).
 
+\par 
+
+For very large numbers
+\cite{Dudek*16b}
+proved the following.
+\begin{thm}{Theorem (2014)}
+
+The interval $(x,x+3 x^{2/3}]$ contains a prime for $x\ge \exp(\exp(34.32))$.
+\end{thm}
 
 
 
+This is improved in 
+\cite{Cully*21}.
 
-  
-2. Interval with primes under RH, without any congruence condition
+\begin{thm}{Theorem (2021)}
+
+The interval $(x,x+3 x^{2/3}]$ contains a prime for $x\ge \exp(\exp(33.99))$.
+\end{thm}
 
 
 
-\par Theorem (2002)
+\section{Interval with primes under RH, without any congruence condition}
 
+
+
+\begin{thm}{Theorem (2002)}
 
 Under the Riemann Hypothesis, the interval $\bigl]x-\tfrac85\sqrt{x}\log x,x\bigr]$
 contains a prime for $x\ge2$.
 \end{thm}
 
 This is improved upon
-in \cite{Dudek*15} into:
+in 
+\cite{Dudek*15} 
+into:
 \begin{thm}{Theorem (2015)}
 
 Under the Riemann Hypothesis, the interval $\bigl]x-\tfrac4{\pi}\sqrt{x}\log x,x\bigr]$
