--- a/TME-EMT/Latex/Art12.tex
+++ b/TME-EMT/Latex/Art12.tex
@@ -25,7 +25,8 @@ For any integer $n\ge3$, the number of prime divisors $\omega(n)$ of $n$ satisfi
 \end{thm}
 
 
-From \cite{Nicolas-Robin*83}:
+From
+\cite{Nicolas-Robin*83}:
 
 \begin{thm}{Theorem (1983)}
 
@@ -45,13 +46,15 @@ For any integer $n\ge3$, we have
 
 
 The PhD
-memoir  \cite{Duras*93}
+memoir
+\cite{Duras*93}
 contains result concerning the maximum
 of $\tau_k(n)$, i.e. the number of $k$-tuples $(d_1,d_2,\ldots, d_k)$
 such that $d_1d_2\cdots d_k=n$, when $3\le k\le 25$.
 
 \par 
-From \cite{Duras-Nicolas-Robin*99}:
+  From
+  \cite{Duras-Nicolas-Robin*99}:
 
 \begin{thm}{Theorem (1999)}
 
@@ -80,20 +83,25 @@ For any integer $n\ge3$, we have
 The first estimate above is a slight improvement of the bound
   $$\sigma(n)\le 2.59 n\log\log n\quad(n\ge7)$$
 obtained in
-\cite{Ivic*77}. In this same paper,
+\cite{Ivic*77}.
+In this same paper,
   the author proves that
 $$\sigma^*(n)\le \frac{28}{15} n\log\log n\quad(n\ge31)$$
 where $\sigma^*(n)$ is the sum of the unitary divisors of $n$, i.e. divisors
   $d$ of $n$ that are such that $d$ and $n/d$ are coprime.
 
-
+\par 
+\par 
+\par 
+On this subject, the readers may consult the web site
+\cite{Nicolas*21}.
 
 
 
 
 
   
-\begin{flushright}\small\sl{}   Last updated on June 10th, 2019, by Olivier Ramar\'e
+\begin{flushright}\small\sl{}   Last updated on September 2nd, 2021, by Olivier Ramar\'e
  \end{flushright}
 
 
