--- a/TME-EMT/Latex/Local-TME-EMT.bib
+++ b/TME-EMT/Latex/Local-TME-EMT.bib
@@ -6407,6 +6407,21 @@ MRREVIEWER = {Valentin Blomer},
   OPTannote = 	 {}
 }
 
+
+
+@TechReport{Nicolas*21,
+  author = 	 {J.-L. Nicolas},
+  title = 	 {Computation about the paper The sum of divisors function and the Riemann hypothesis},
+  institution =  {},
+  year = 	 {2021},
+  OPTkey = 	 {},
+  OPTtype = 	 {},
+  OPTnumber = 	 {},
+  OPTaddress = 	 {},
+  OPTmonth = 	 {},
+  note = 	 {\url ={http://math.univ-lyon1.fr/~nicolas/calculcolHR.html}},
+}
+
 @InCollection{Duras-Nicolas-Robin*99,
   Title                    = {Grandes valeurs de la fonction {$d_k$}},
   Author                   = {J.-L. Duras and J.-L. Nicolas and G. Robin},
