ref to mathjax!

--- a/TME-EMT/Latex/Art12.tex
+++ b/TME-EMT/Latex/Art12.tex
@@ -16,7 +16,8 @@ Corresponding html file: \texttt{../Articles/Art12.html}
 
 The following bounds may be useful is applications.
 
-From \cite{Robin*83-1}:
+From
+\cite{Robin*83-1}:
 
 \begin{thm}{Theorem (1983)}
 
