problem with url in bib

--- a/TME-EMT/Biblio/Local-TME-EMT.bib
+++ b/TME-EMT/Biblio/Local-TME-EMT.bib
@@ -6419,7 +6419,7 @@ MRREVIEWER = {Valentin Blomer},
   OPTnumber = 	 {},
   OPTaddress = 	 {},
   OPTmonth = 	 {},
-  note = 	 {\url ={http://math.univ-lyon1.fr/~nicolas/calculcolHR.html}},
+  URL = 	 {http://math.univ-lyon1.fr/~nicolas/calculcolHR.html},
 }
 
 @InCollection{Duras-Nicolas-Robin*99,
