problem with url in bib

--- a/TME-EMT/Latex/Art10.tex
+++ b/TME-EMT/Latex/Art10.tex
@@ -29,7 +29,7 @@ via their Dirichlet series is known as the Convolution method and is for
 instance decribed at length in 
 \cite{Berment-Ramare*12}, and in
 the course that can be found 
-here\footnote{\url{http://math.univ-lille1.fr/~ramare/CoursNouakchott/index.html}}.
+here\footnote{\url{https://ramare-olivier.github.io/CoursNouakchott/index.html}}.
 
 
 \begin{thm}{Theorem (1995)}
