--- a/TME-EMT/Latex/Art12.tex
+++ b/TME-EMT/Latex/Art12.tex
@@ -95,7 +95,10 @@ where $\sigma^*(n)$ is the sum of the unitary divisors of $n$, i.e. divisors
 \par 
 \par 
 On this subject, the readers may consult the web site
-\cite{Nicolas*21}.
+
+Computation about the paper The sum of divisors function and the
+Riemann hypothesis
+.
 
 
 
