problem with url in bib

--- a/TME-EMT/Latex/Art12.tex
+++ b/TME-EMT/Latex/Art12.tex
@@ -96,8 +96,8 @@ where $\sigma^*(n)$ is the sum of the unitary divisors of $n$, i.e. divisors
 \par 
 On this subject, the readers may consult the web site
 
-Computation about the paper The sum of divisors function and the
-Riemann hypothesis
+The sum of divisors function and the
+Riemann hypothesis.
 .
 
 
