StockEchange and Art08 / Art12 updates

--- a/TME-EMT/Biblio/Local-TME-EMT-ini.bib
+++ b/TME-EMT/Biblio/Local-TME-EMT-ini.bib
@@ -948,50 +948,12 @@ MRREVIEWER = {Giovanni Coppola},
   year={2016},
   publisher={Adam Mickiewicz University, Faculty of Mathematics and Computer Science}
 }
-@article {Platt-Trudgian*21a,
-    AUTHOR = {Platt, Dave and Trudgian, Tim},
-     TITLE = {The {R}iemann hypothesis is true up to {$3\cdot10^{12}$}},
-   JOURNAL = {Bull. Lond. Math. Soc.},
-  FJOURNAL = {Bulletin of the London Mathematical Society},
-    VOLUME = {53},
-      YEAR = {2021},
-    NUMBER = {3},
-     PAGES = {792--797},
-      ISSN = {0024-6093},
-   MRCLASS = {11M26 (11M06)},
-  MRNUMBER = {4275089},
-       DOI = {10.1112/blms.12460},
-}
-@article {Washington-Yang*21,
-    AUTHOR = {Washington, Lawrence C. and Yang, Ambrose},
-     TITLE = {Analogues of the {R}obin-{L}agarias criteria for the {R}iemann
-              hypothesis},
-   JOURNAL = {Int. J. Number Theory},
-  FJOURNAL = {International Journal of Number Theory},
-    VOLUME = {17},
-      YEAR = {2021},
-    NUMBER = {4},
-     PAGES = {843--870},
-      ISSN = {1793-0421},
-   MRCLASS = {11M26 (11A25)},
-  MRNUMBER = {4262269},
-       DOI = {10.1142/S1793042121500111},
-}		
-@article {Eum-Koo*15,
-    AUTHOR = {Eum, Ick Sun and Koo, Ja Kyung},
-     TITLE = {The {R}iemann hypothesis and an upper bound of the divisor
-              function for odd integers},
-   JOURNAL = {J. Math. Anal. Appl.},
-  FJOURNAL = {Journal of Mathematical Analysis and Applications},
-    VOLUME = {421},
-      YEAR = {2015},
-    NUMBER = {1},
-     PAGES = {917--924},
-      ISSN = {0022-247X},
-   MRCLASS = {11M26},
-  MRNUMBER = {3250515},
-MRREVIEWER = {Gaspar Mora},
-       DOI = {10.1016/j.jmaa.2014.07.063},
+
+@article{Cully*21,
+  title={Primes between consecutive powers},
+  author={Cully-Hugill, Michaela},
+  journal={arXiv preprint arXiv:2107.14468},
+  year={2021}
 }
 @article {Lau-Liu-Wu*12,
     AUTHOR = {Lau, Y.-K. and Liu, J.-Y. and Wu, J.},
@@ -6445,6 +6407,7 @@ MRREVIEWER = {Valentin Blomer},
   OPTannote = 	 {}
 }
 
+
 @InCollection{Duras-Nicolas-Robin*99,
   Title                    = {Grandes valeurs de la fonction {$d_k$}},
   Author                   = {J.-L. Duras and J.-L. Nicolas and G. Robin},
@@ -8731,22 +8694,7 @@ MRREVIEWER = {Ti Yen},
        DOI = {10.1017/S0004972700024588},
 }
 		
-@Article{Green-Ruzsa*04,
- Author = {Ben {Green} and Imre Z. {Ruzsa}},
- Title = {{On the Hardy-Littlewood majorant problem}},
- FJournal = {{Mathematical Proceedings of the Cambridge Philosophical Society}},
- Journal = {{Math. Proc. Camb. Philos. Soc.}},
- ISSN = {0305-0041},
- Volume = {137},
- Number = {3},
- Pages = {511--517},
- Year = {2004},
- Publisher = {Cambridge University Press, Cambridge},
- Language = {English},
- DOI = {10.1017/S0305004104007911},
- MSC2010 = {42B10 40D05 42B25},
- Zbl = {1066.42009}
-}
+
 @article {Green-Ruzsa*05,
     AUTHOR = {Green, Ben and Ruzsa, Imre Z.},
      TITLE = {Sum-free sets in abelian groups},
@@ -9837,23 +9785,6 @@ MRREVIEWER = {Vilius Stak\"Anas},
   MRNUMBER = {3806689},
 MRREVIEWER = {Adam J. Harper},
        DOI = {10.1016/j.jmaa.2018.04.071},
-}
-
-@Article{Harper*16,
- Author = {Adam J. {Harper}},
- Title = {{Minor arcs, mean values, and restriction theory for exponential sums over smooth numbers}},
- FJournal = {{Compositio Mathematica}},
- Journal = {{Compos. Math.}},
- ISSN = {0010-437X},
- Volume = {152},
- Number = {6},
- Pages = {1121--1158},
- Year = {2016},
- Publisher = {Cambridge University Press, Cambridge; London Mathematical Society, London},
- Language = {English},
- DOI = {10.1112/S0010437X15007782},
- MSC2010 = {11L07 11N25 11D04},
- Zbl = {1362.11077}
 }
 @article {Kadiri-Lumley*14,
     AUTHOR = {Kadiri, Habiba and Lumley, Allysa},
