--- a/TME-EMT/Latex/Art08.tex
+++ b/TME-EMT/Latex/Art08.tex
@@ -39,7 +39,7 @@ announced that, he and many collaborators proved, using a network method:
   $T_0=29\,538\,618\,432$ is admissible in the theorem above.
 \end{thm}
 
-And
+
 \cite{Gourdon-Demichel*04}
 went one step further
 \par 
@@ -49,6 +49,18 @@ went one step further
 \end{thm}
 
 These two last announcements have not been subject to any academic papers.
+
+We now have
+\cite{Platt-Trudgian*21a}
+\par 
+\begin{thm}{Theorem (2021)}
+
+  $T_0=3\cdot 10^{12}$ is admissible in the theorem above.
+\end{thm}
+
+
+
+
 
 One of the key ingredient is an explicit Riemann-Siegel formula due to
 \cite{Gabcke*79}
@@ -320,7 +332,7 @@ contains extensive tables concerning zeroes of the Riemann zeta function.
 
 
   
-\begin{flushright}\small\sl{}   Last updated on June 18th, 2019, by Olivier Ramar\'e
+\begin{flushright}\small\sl{}   Last updated on September 19th, 2021, by Olivier Ramar\'e
  \end{flushright}
 
 
