--- a/TME-EMT/Latex/Art12.tex
+++ b/TME-EMT/Latex/Art12.tex
@@ -92,6 +92,20 @@ where $\sigma^*(n)$ is the sum of the unitary divisors of $n$, i.e. divisors
   $d$ of $n$ that are such that $d$ and $n/d$ are coprime.
 
 \par 
+In
+\cite{Eum-Koo*15}
+we find the next estimate
+\begin{thm}{Theorem (2015)}
+
+For any integer $n\ge21$, we have
+  $$\sigma(n)\le \tfrac34e^\gamma n\log\log n.$$
+\end{thm}
+
+
+Further estimates restricted to some sets of integers may be found in
+this paper as well as in
+\cite{Washington-Yang*21}.
+
 \par 
 \par 
 On this subject, the readers may consult the web site
@@ -105,7 +119,7 @@ Riemann hypothesis.
 
 
   
-\begin{flushright}\small\sl{}   Last updated on September 2nd, 2021, by Olivier Ramar\'e
+\begin{flushright}\small\sl{}   Last updated on September 19th, 2021, by Olivier Ramar\'e
  \end{flushright}
 
 
