--- a/TME-EMT/Biblio/biblio.tex
+++ b/TME-EMT/Biblio/biblio.tex
@@ -132,6 +132,8 @@
 \nocite{Duras-Nicolas-Robin*99}
 \nocite{Nicolas*08}
 \nocite{Ivic*77}
+\nocite{Eum-Koo*15}
+\nocite{Washington-Yang*21}
 \nocite{Ramare*95}
 \nocite{Berment-Ramare*12}
 \nocite{Ramare*95}
@@ -182,6 +184,7 @@
 \nocite{Platt*17}
 \nocite{Wedeniwski*02}
 \nocite{Gourdon-Demichel*04}
+\nocite{Platt-Trudgian*21a}
 \nocite{Gabcke*79}
 \nocite{Rumely*93}
 \nocite{Bennett*01}
